--- a/MyTaiwanStock/Base.lproj/Main.storyboard
+++ b/MyTaiwanStock/Base.lproj/Main.storyboard
@@ -121,7 +121,7 @@
                     <navigationItem key="navigationItem" id="huU-Fo-YWO">
                         <nil key="title"/>
                         <button key="titleView" opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" changesSelectionAsPrimaryAction="YES" id="X4d-Oa-zZH">
-                            <rect key="frame" x="186.66666666666666" y="7" width="144" height="96"/>
+                            <rect key="frame" x="135" y="0.0" width="144" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                             <menu key="menu" id="LLm-Zc-UkD">
@@ -130,7 +130,9 @@
                                     <command title="Item 2" id="hZZ-i0-hVv"/>
                                 </children>
                             </menu>
-                            <state key="normal" title="Button"/>
+                            <state key="normal" title="Button">
+                                <color key="titleColor" systemColor="labelColor"/>
+                            </state>
                         </button>
                         <barButtonItem key="rightBarButtonItem" title="Item" image="plus" catalog="system" id="eFB-o9-8wW">
                             <connections>
@@ -159,16 +161,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="q5K-MN-mcm">
-                                <rect key="frame" x="0.0" y="44" width="414" height="51"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="uWR-Jc-CaX">
-                                <rect key="frame" x="0.0" y="95" width="414" height="592"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="643"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="q5K-MN-mcm">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="51"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="tintColor" systemColor="labelColor"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="stockNoSuggestion" id="cSS-fM-efB" customClass="AddStockTableViewCell" customModule="MyTaiwanStock" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.666666030883789" width="414" height="43.666667938232422"/>
+                                        <rect key="frame" x="0.0" y="95.666666030883789" width="414" height="43.666667938232422"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cSS-fM-efB" id="zPW-Bo-KLs">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.666667938232422"/>
@@ -182,6 +186,7 @@
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4l4-Jr-XQ7">
                                                     <rect key="frame" x="357" y="6.3333333333333321" width="47" height="30.999999999999996"/>
+                                                    <color key="tintColor" systemColor="labelColor"/>
                                                     <buttonConfiguration key="configuration" style="plain" image="star" catalog="system"/>
                                                     <connections>
                                                         <action selector="touchConfirmButton" destination="cSS-fM-efB" eventType="touchUpInside" id="V3e-kU-0Ra"/>
@@ -206,12 +211,9 @@
                         <viewLayoutGuide key="safeArea" id="cAU-UD-U7e"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="q5K-MN-mcm" firstAttribute="trailing" secondItem="cAU-UD-U7e" secondAttribute="trailing" id="01C-Nj-0f2"/>
                             <constraint firstItem="uWR-Jc-CaX" firstAttribute="leading" secondItem="cAU-UD-U7e" secondAttribute="leading" id="82h-cE-0i3"/>
-                            <constraint firstItem="q5K-MN-mcm" firstAttribute="top" secondItem="cAU-UD-U7e" secondAttribute="top" id="CMy-aD-RtL"/>
-                            <constraint firstItem="uWR-Jc-CaX" firstAttribute="top" secondItem="q5K-MN-mcm" secondAttribute="bottom" id="gRj-UY-GdZ"/>
                             <constraint firstItem="cAU-UD-U7e" firstAttribute="trailing" secondItem="uWR-Jc-CaX" secondAttribute="trailing" id="nYD-C5-qPh"/>
-                            <constraint firstItem="q5K-MN-mcm" firstAttribute="leading" secondItem="cAU-UD-U7e" secondAttribute="leading" id="xbj-Yt-DGl"/>
+                            <constraint firstItem="uWR-Jc-CaX" firstAttribute="top" secondItem="cAU-UD-U7e" secondAttribute="top" id="rg3-Fi-Qpw"/>
                             <constraint firstItem="cAU-UD-U7e" firstAttribute="bottom" secondItem="uWR-Jc-CaX" secondAttribute="bottom" id="zmG-hk-yy9"/>
                         </constraints>
                     </view>
@@ -753,23 +755,23 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="newsCell" id="rvN-rk-0s8" customClass="NewsListTableViewCell" customModule="MyTaiwanStock" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.666666030883789" width="414" height="141.66667175292969"/>
+                                        <rect key="frame" x="0.0" y="44.666666030883789" width="414" height="151"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rvN-rk-0s8" id="rL8-z7-O53">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="141.66667175292969"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="151"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Sa0-Pd-IT3">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="141.66666666666666"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="151"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iiA-RP-30k">
-                                                            <rect key="frame" x="0.0" y="0.0" width="80" height="141.66666666666666"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="80" height="151"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="80" id="Cry-KH-IEH"/>
                                                             </constraints>
                                                         </imageView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="5nJ-BK-23T">
-                                                            <rect key="frame" x="85" y="0.0" width="329" height="141.66666666666666"/>
+                                                            <rect key="frame" x="85" y="0.0" width="329" height="151"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="News Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fh5-No-eWi">
                                                                     <rect key="frame" x="0.0" y="0.0" width="329" height="20.333333333333332"/>
@@ -778,13 +780,13 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="detail" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Er-nv-s7J" userLabel="Detail">
-                                                                    <rect key="frame" x="0.0" y="20.333333333333329" width="329" height="107"/>
+                                                                    <rect key="frame" x="0.0" y="20.333333333333336" width="329" height="116.33333333333331"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="News date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7jc-nc-AXH">
-                                                                    <rect key="frame" x="0.0" y="127.33333333333333" width="329" height="14.333333333333329"/>
+                                                                    <rect key="frame" x="0.0" y="136.66666666666666" width="329" height="14.333333333333343"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                                     <color key="textColor" systemColor="systemGray2Color"/>
                                                                     <nil key="highlightedColor"/>
@@ -1002,11 +1004,10 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="nxP-KY-h5K">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="barTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" systemColor="labelColor"/>
+                        <color key="barTintColor" systemColor="systemBackgroundColor"/>
                         <textAttributes key="titleTextAttributes">
-                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="textColor" systemColor="labelColor"/>
                         </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
